--- a/backend/online-library/src/main/resources/application.properties
+++ b/backend/online-library/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+
+# datasource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://13.93.27.191:3306/library?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -6,3 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # set base url
 server.servlet.context-path=/api
+
+# pagination
+paging.default.size=50
+paging.default.page=0
