modified: move respository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ server.servlet.context-path=/api
 # pagination
 paging.default.size=3
 paging.default.page=0
+
+# vm options for maven build
+jasypt.encryptor.password=aseversion2
