add: swagger doc & format response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ paging.default.page=0
 
 # vm options for maven build
 jasypt.encryptor.password=aseversion2
+
+# swagger
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.path=/docs
