--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # uncomment to switch to dev(local) application.properties
-# spring.profiles.active=dev
+spring.profiles.active=dev
 
 # datasource config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
