--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,5 +24,6 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.api-docs.path=/docs
 
 # Security
-library.app.jwtSecret=aseversion2
+# keys used with HMAC-SHA algorithms MUST have a size >= 256 bits
+library.app.jwtSecret=======================aseversion2==============================
 library.app.jwtExpirationMs=86400000
