modify: enable sql log

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false&useUnicod
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # 10 minutes wait time
 # (need to shorter than database's wait_timeout)
