--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,10 +5,17 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/library?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 # use your mysql username and pwd
 spring.datasource.username=root
-spring.datasource.password=G132535yzy
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# redis
+spring.data.redis.database=0
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+spring.data.redis.password=123456
+spring.data.redis.timeout=3000
 
 # 10 minutes wait time
 # (need to shorter than database's wait_timeout)
